restructure my icons

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Weather Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+    <title>⛅Weather today</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Personal Weather Dashboard</h1>
+        <h1>Weather Dashboard</h1>
         
         <div class="search-container">
             <input type="text" id="cityInput" placeholder="Enter city name...">
@@ -39,6 +39,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
