--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Weather Dashboard</h1>
+        <h1>🌤️Weather today</h1>
         
         <div class="search-container">
             <input type="text" id="cityInput" placeholder="Enter city name...">
@@ -36,7 +36,13 @@
             <h3>5-Day Forecast</h3>
             <div id="forecast" class="forecast">
             </div>
-        </div>
+        <div>
+            <div id="favoritesSection">
+    <h3>⭐ Favorite Cities</h3>
+    <button id="showFavoritesBtn">Show Favorites</button>
+    <button id="addToFavoritesBtn">Add Current City to Favorites</button>
+    <ul id="favoritesList"></ul>
+            </div>
     </div>
 
     <script src="./script.js"></script>
