--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             </div>
         <div>
             <div id="favoritesSection">
-    <h3>⭐ Favorite Cities</h3>
-    <button id="showFavoritesBtn">Show Favorites</button>
-    <button id="addToFavoritesBtn">Add Current City to Favorites</button>
+    <h3>manage cities</h3>
+    <button id="showFavoritesBtn">Recent</button>
+    <button id="addToFavoritesBtn">Add to Favorites</button>
     <ul id="favoritesList"></ul>
             </div>
     </div>
