adding final html changes

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
             </div>
         <div>
             <div id="favoritesSection">
-    <h3>manage cities</h3>
-    <button id="showFavoritesBtn">Recent</button>
+    <h3>favorite cities</h3>
     <button id="addToFavoritesBtn">Add to Favorites</button>
     <ul id="favoritesList"></ul>
             </div>
